@@ -1,2 +1,2 @@
 #!/usr/bin/env bash
-JAVA_OPTS="$JAVA_OPTS -server -Xss1024K -Xms1G -Xmx3G -XX:MaxPermSize=512M -XX:NewSize=512m -Djava.net.preferIPv4Stack=true"
+JAVA_OPTS="$JAVA_OPTS -server -Xss1024K -Xms1G -Xmx3G -Djava.net.preferIPv4Stack=true"
